#11 - nouvelle mise en page des formulaires + remplacement des class "btn-link" par "btn-default"

--- a/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/edit.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/edit.html.twig
@@ -40,7 +40,7 @@
 
             {{form_row(edit_form._token)}}
 		    <div class="form-actions">
-                <a class="btn btn-link" href="{{ path('admin_content_blog') }}">
+                <a class="btn btn-default" href="{{ path('admin_content_blog') }}">
                     <i class="icon-arrow-left"></i> Retour à la liste des articles
                 </a>
 		        <button class="btn btn-primary pull-right" type="submit">Enregistrer</button>
