#11 - remplacement des class "btn-link" par "btn-default"

--- a/src/Aml/Bundle/BlogBundle/Resources/views/Admin/BlogCategories/index.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Admin/BlogCategories/index.html.twig
@@ -15,7 +15,7 @@
         <h1>Blog - Gestion des catégories</h1>
 
         <div class="form-actions">
-            <a class="btn btn-link" href="{{ path('admin_content_blog_categories_new') }}">
+            <a class="btn btn-default" href="{{ path('admin_content_blog_categories_new') }}">
                 <i class="icon-plus"></i> Créer une catégorie
             </a>
         </div>
