--- a/src/Aml/Bundle/BlogBundle/Resources/views/Admin/BlogCategories/new.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Admin/BlogCategories/new.html.twig
@@ -20,7 +20,7 @@
 
 
             <div class="form-actions">
-                <a class="btn btn-link" href="{{ path('admin_content_blog_categories') }}">
+                <a class="btn btn-default" href="{{ path('admin_content_blog_categories') }}">
                     <i class="icon-arrow-left"></i> Retour à la liste des catégories
                 </a>
 
