--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Medias/new.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Medias/new.html.twig
@@ -26,7 +26,7 @@
 		</form>
 		
 		
-        <a class="btn btn-link" href="{{ path('admin_medias') }}">
+        <a class="btn btn-default" href="{{ path('admin_medias') }}">
             <i class="icon-arrow-left" ></i> Retour à la liste des fichiers
         </a>
 		   
