--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Page/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Page/index.html.twig
@@ -12,7 +12,7 @@
 	<div class="span12">
 
         <div class="form-actions">
-            <a class="btn btn-link" href="{{ path('admin_content_pages_new') }}">
+            <a class="btn btn-default" href="{{ path('admin_content_pages_new') }}">
                 <i class="icon-plus"></i> Créer une nouvelle page
             </a>
         </div>
