--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partenaire/edit.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partenaire/edit.html.twig
@@ -24,7 +24,7 @@
             {{ form_rest(edit_form) }}
 
             <div class="form-actions">
-                <a href="{{ path('admin_agenda') }}" class="btn btn-link" title="Retourner à la liste des partenaires">
+                <a href="{{ path('admin_agenda') }}" class="btn btn-default" title="Retourner à la liste des partenaires">
                     <i class="icon-arrow-left"></i>
                     retour à la liste des partenaires
                 </a>
