--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Link/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Link/index.html.twig
@@ -12,7 +12,7 @@
 	<div class="span12">
 
         <div class="form-actions">
-            <a class="btn btn-link" href="{{ path('content_link_new') }}">
+            <a class="btn btn-default" href="{{ path('content_link_new') }}">
                 <i class="icon-plus"></i> Ajouter un lien
             </a>
         </div>
@@ -36,7 +36,7 @@
                         <td>
                             <ul class="nav">
                                 <li>
-                                    <a class="btn btn-link" href="{{ path('content_link_edit', { 'id': entity.id }) }}" title="Modifier le lien">
+                                    <a class="btn btn-default" href="{{ path('content_link_edit', { 'id': entity.id }) }}" title="Modifier le lien">
                                         <i class="icon-pencil"></i> Modifier
                                     </a>
                                 </li>
