--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partenaire/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partenaire/index.html.twig
@@ -13,7 +13,7 @@
     <div class="span12">
 
         <div class="form-actions">
-            <a class="btn btn-link" href="{{ path('admin_partenaire_new') }}">
+            <a class="btn btn-default" href="{{ path('admin_partenaire_new') }}">
                 <i class="icon-plus"></i> Ajouter un partenaire
             </a>
         </div>
@@ -34,7 +34,7 @@
                     <td>{{ entity.name }}</td>
                     <td>{{ entity.description }}</td>
                     <td>
-                        <a class="btn btn-link" href="{{ path('admin_partenaire_edit', { 'id': entity.id }) }}"><i class="icon-pencil"></i> Modifier</a>
+                        <a class="btn btn-default" href="{{ path('admin_partenaire_edit', { 'id': entity.id }) }}"><i class="icon-pencil"></i> Modifier</a>
                     </td>
                 </tr>
             {% endfor %}
