--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partenaire/new.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partenaire/new.html.twig
@@ -21,7 +21,7 @@
                 {{ form_rest(form) }}
 
                 <div class="form-actions">
-                    <a href="{{ path('admin_agenda') }}" class="btn btn-link" title="Retourner à la liste des évènements">
+                    <a href="{{ path('admin_agenda') }}" class="btn btn-default" title="Retourner à la liste des évènements">
                         <i class="icon-arrow-left"></i>
                         retour à la liste des partenaires
                     </a>
