--- a/src/Aml/Bundle/UsersBundle/Resources/views/Admin/User/show.html.twig
+++ b/src/Aml/Bundle/UsersBundle/Resources/views/Admin/User/show.html.twig
@@ -12,7 +12,7 @@
         </tr>
         <tr>
             <th>Login</th>
-            <td>{{ entity.login }}</td>
+            <td>{{ entity.username }}</td>
         </tr>
         <tr>
             <th>Password</th>
@@ -24,19 +24,19 @@
         </tr>
         <tr>
             <th>Nom</th>
-            <td>{{ entity.nom }}</td>
+            <td>{{ entity.lastname }}</td>
         </tr>
         <tr>
             <th>Prenom</th>
-            <td>{{ entity.prenom }}</td>
+            <td>{{ entity.firstname }}</td>
         </tr>
         <tr>
             <th>Adresse</th>
-            <td>{{ entity.adresse }}</td>
+            <td>{# entity.adresse #}</td>
         </tr>
         <tr>
             <th>Statut</th>
-            <td>{{ entity.statut }}</td>
+            <td>{# entity.statut #}</td>
         </tr>
         <tr>
             <th>Avatar</th>
