--- a/src/Aml/Bundle/UsersBundle/Resources/views/Admin/User/edit.html.twig
+++ b/src/Aml/Bundle/UsersBundle/Resources/views/Admin/User/edit.html.twig
@@ -17,22 +17,15 @@
 	<div class="span5">
 		<h1>User edit</h1>
 
-		<form class="form-horizontal" action="{{ path('admin_user_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-		    {{ form_widget(edit_form) }}
-
-            <div class="form-actions">
-                <a class="btn btn-link" href="{{ path('admin_user') }}">
-                    <i class="icon-arrow-left"></i> Retour à la liste des membres
-                </a>
-                <button class="btn btn-primary pull-right" type="submit">Enregistrer</button>
-            </div>
-		</form>
+        {% block fos_user_content %}
+            {% include "FOSUserBundle:Profile:edit_content.html.twig" %}
+        {% endblock fos_user_content %}
 		
 		<ul class="record_actions">
 
 		    <li>
 		        <form action="{{ path('admin_user_delete', { 'id': entity.id }) }}" method="post">
-		            {{ form_widget(delete_form) }}
+		            {# form_widget(delete_form) #}
 		            <button class="btn btn-danger" type="submit">Supprimer</button>
 		        </form>
 		    </li>
