--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/article.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/article.html.twig
@@ -18,7 +18,7 @@
 
     {% if entity.logo.webpath is defined %}
     <div rel="prettyPhoto" class="blog-visuel">
-        <a rel="prettyPhoto" href="sites/default/files/blog/logoTelim.jpg">
+        <a rel="prettyPhoto" href="{{ asset(entity.logo.webpath) }}">
             <img width="375" height="250" class="imagecache imagecache-visuel_blog_list" title="{{ entity.logo.title }}" src="{{ asset(entity.logo.webpath) }}">
         </a>
     </div>
