surcharge templates admin

--- a/src/Aml/Bundle/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/layout.html.twig
@@ -40,9 +40,8 @@
         <div class="primary-sidebar-background"></div>
     </div>
 
-    {# Barre de navigation top #}
+    {# Barre de navigation gauche #}
     {% include "AmlAdminBundle::Navigation/primary_sidebar.html.twig" %}
-
 
 
     <div class="main-content">
