--- a/src/Aml/Bundle/AdminBundle/Resources/views/CRUD/list.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/CRUD/list.html.twig
@@ -9,4 +9,4 @@ file that was distributed with this source code.
 
 #}
 
-{% extends 'SonataAdminBundle:CRUD:base_edit.html.twig' %}
+{% extends 'AmlAdminBundle:CRUD:base_list.html.twig' %}
