--- a/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/navbar.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/navbar.html.twig
@@ -9,7 +9,42 @@
                 <span class="icon-bar"></span>
             </a>
 
-            <a class="brand" href="#">{{ project_name }}</a>
+            {% if admin_pool is defined %}
+                <div class="navbar-text pull-right">{% include admin_pool.getTemplate('user_block') %}</div>
+
+                {% block logo %}
+                    <a href="{{ url('sonata_admin_dashboard') }}" class="brand">
+                        <img src="{{ asset(admin_pool.titlelogo) }}"  alt="{{ admin_pool.title }}" />
+                        {{ admin_pool.title }}
+                    </a>
+                {% endblock %}
+
+            {% endif %}
+
+            {% block sonata_nav_menu %}
+                <div class="nav-collapse">
+                    <ul class="nav">
+                        {% block top_bar_before_nav %} {% endblock %}
+                        {% block sonata_top_bar_nav %}
+                            {% if app.security.token and is_granted('ROLE_SONATA_ADMIN') %}
+                                {% for group in admin_pool.dashboardgroups %}
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ group.label|trans({}, group.label_catalogue) }} <span class="caret"></span></a>
+                                        <ul class="dropdown-menu">
+                                            {% for admin in group.items %}
+                                                {% if admin.hasroute('list') and admin.isGranted('LIST') %}
+                                                    <li><a href="{{ admin.generateUrl('list')}}">{{ admin.label|trans({}, admin.translationdomain) }}</a></li>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </ul>
+                                    </li>
+                                {% endfor %}
+                            {% endif %}
+                        {% endblock %}
+                        {% block top_bar_after_nav %} {% endblock %}
+                    </ul>
+                </div>
+            {% endblock %}
 
             <!-- the new toggle buttons -->
             <ul class="nav pull-right">
