--- a/src/Aml/Bundle/AdminBundle/Resources/views/standard_layout.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/standard_layout.html.twig
@@ -70,160 +70,153 @@ file that was distributed with this source code.
     <body class="{% if _side_menu is empty %}sonata-ba-no-side-menu{% endif %}">
         {# initialize block value #}
 
-        <div class="navbar navbar-top navbar-inverse">
-            <div class="navbar-inner">
-                <div class="container-fluid">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </a>
+        {# Barre de navigation top #}
+        {% include "AmlAdminBundle::Navigation/navbar.html.twig" %}
 
-                    {% if admin_pool is defined %}
-                        <div class="navbar-text pull-right">{% include admin_pool.getTemplate('user_block') %}</div>
-
-                        {% block logo %}
-                            <a href="{{ url('sonata_admin_dashboard') }}" class="brand">
-                                <img src="{{ asset(admin_pool.titlelogo) }}"  alt="{{ admin_pool.title }}" />
-                                {{ admin_pool.title }}
-                            </a>
-                        {% endblock %}
-
-                        {% block sonata_nav_menu %}
-                            <div class="nav-collapse">
-                                <ul class="nav">
-                                    {% block top_bar_before_nav %} {% endblock %}
-                                    {% block sonata_top_bar_nav %}
-                                        {% if app.security.token and is_granted('ROLE_SONATA_ADMIN') %}
-                                            {% for group in admin_pool.dashboardgroups %}
-                                                <li class="dropdown">
-                                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ group.label|trans({}, group.label_catalogue) }} <span class="caret"></span></a>
-                                                    <ul class="dropdown-menu">
-                                                        {% for admin in group.items %}
-                                                            {% if admin.hasroute('list') and admin.isGranted('LIST') %}
-                                                                <li><a href="{{ admin.generateUrl('list')}}">{{ admin.label|trans({}, admin.translationdomain) }}</a></li>
-                                                            {% endif %}
-                                                        {% endfor %}
-                                                    </ul>
-                                                </li>
-                                            {% endfor %}
-                                        {% endif %}
-                                    {% endblock %}
-                                    {% block top_bar_after_nav %} {% endblock %}
-                                </ul>
-                            </div>
-                        {% endblock %}
-                    {% endif %}
-                </div>
-            </div>
+        <div class="sidebar-background">
+            <div class="primary-sidebar-background"></div>
         </div>
 
-        <div class="container-fluid">
-            {% block notice %}
-                {% for notice_level in ['success','error','info', 'warning'] %}
-                    {% set session_var = 'sonata_flash_' ~ notice_level %}
-                    {% for flash in app.session.flashbag.get(session_var) %}
-                        <div class="alert {{ 'alert-' ~ notice_level }}">
-                            {{ flash|trans([], 'SonataAdminBundle') }}
+        {# Barre de navigation gauche #}
+        {% include "AmlAdminBundle::Navigation/primary_sidebar.html.twig" %}
+
+        <div class="main-content">
+
+            {# Page title #}
+            <div class="container-fluid">
+                <div class="row-fluid">
+                    <div class="area-top clearfix">
+                        <div class="pull-left header">
+                            <h3 class="title">
+                                <i class="icon-dashboard"></i>
+                                {% if _title is not empty %}
+                                    {{ _title|raw }}
+                                {% else %}
+                                    {% if action is defined %}
+                                        {% for menu in admin.breadcrumbs(action) %}
+                                            {% if loop.last  %}
+                                                {{ menu.label }}
+                                            {% endif %}
+
+                                        {% endfor %}
+                                    {% endif %}
+                                {% endif%}
+                            </h3>
+                            <h5>
+                                A subtitle can be added here
+                            </h5>
                         </div>
-                    {% endfor %}
-                {% endfor %}
-            {% endblock %}
+                    </div>
+                </div>
+            </div>
 
-
+            {# Breadcrumb line #}
             <div class="container-fluid padded">
                 <div class="row-fluid">
-                    <div class="span6">
-                        {% if _breadcrumb is not empty or action is defined %}
-                        <div id="breadcrumbs">
-                            {% if _breadcrumb is empty %}
-                            {% if action is defined %}
-                            {% for menu in admin.breadcrumbs(action) %}
-                            {% if loop.first  %}
-                            <div class="breadcrumb-button blue">
-										<span class="breadcrumb-label">
-										{% if menu.uri is not empty %}
+                    {% if _breadcrumb is not empty or action is defined %}
+                    <div id="breadcrumbs">
+                        {% if _breadcrumb is empty %}
+                        {% if action is defined %}
+                        {% for menu in admin.breadcrumbs(action) %}
+                        {% if loop.first  %}
+                        <div class="breadcrumb-button blue">
+                                        <span class="breadcrumb-label">
+                                        {% if menu.uri is not empty %}
                                             <a href="{{ menu.uri }}">{{ menu.label }}</a>
                                         {% else %}
                                             {{ menu.label }}
                                         {% endif %}
-										</span>
-                                <span class="breadcrumb-arrow"><span></span></span>
-                            </div>
-                            {% elseif not loop.last  %}
-                                <div class="breadcrumb-button">
-										<span class="breadcrumb-label">
-										{% if menu.uri is not empty %}
-                                            <a href="{{ menu.uri }}">{{ menu.label }}</a>
-                                        {% else %}
-                                            {{ menu.label }}
-                                        {% endif %}
-										</span>
-                                    <span class="breadcrumb-arrow"><span></span></span>
-                                </div>
-                            {% else %}
-                            <div class="breadcrumb-button">
-                                <span class="breadcrumb-label">{{ menu.label }}
-                                <span class="breadcrumb-arrow"><span></span></span>
-                            </div>
+                                        </span>
+                            <span class="breadcrumb-arrow"><span></span></span>
                         </div>
-                        {% endif %}
-                        {% endfor %}
-                        {% endif %}
+                        {% elseif not loop.last  %}
+                            <div class="breadcrumb-button">
+                                        <span class="breadcrumb-label">
+                                        {% if menu.uri is not empty %}
+                                            <a href="{{ menu.uri }}">{{ menu.label }}</a>
+                                        {% else %}
+                                            {{ menu.label }}
+                                        {% endif %}
+                                        </span>
+                                <span class="breadcrumb-arrow"><span></span></span>
+                            </div>
                         {% else %}
-                            {{ _breadcrumb|raw }}
-                        {% endif %}
+                        <div class="breadcrumb-button">
+                                <span class="breadcrumb-label">{{ menu.label }}
+                                    <span class="breadcrumb-arrow"><span></span></span>
+                        </div>
                     </div>
                     {% endif %}
+                    {% endfor %}
+                    {% endif %}
+                    {% else %}
+                        {{ _breadcrumb|raw }}
+                    {% endif %}
                 </div>
-
-                <div class="span4 offset2">
-                    {%block actions %}{% endblock %}
-                </div>
-            </div>
-        </div>
-
-            <div class="row-fluid">
-                {% if _side_menu is not empty %}
-                    <div class="sidebar span2">
-                        <div class="well sonata-ba-side-menu" style="padding: 8px 0;">{{ _side_menu|raw }}</div>
-                    </div>
                 {% endif %}
 
-                <div class="content {{ _side_menu is not empty ? ' span10' : 'span12' }}">
-                    {% block sonata_admin_content %}
-
-                        {% if _preview is not empty %}
-                            <div class="sonata-ba-preview">{{ _preview|raw }}</div>
-                        {% endif %}
-
-                        {% if _content is not empty %}
-                            <div class="sonata-ba-content">{{ _content|raw }}</div>
-                        {% endif %}
-
-                        {% if _show is not empty %}
-                            <div class="sonata-ba-show">{{ _show|raw }}</div>
-                        {% endif %}
-
-                        {% if _form is not empty %}
-                            <div class="sonata-ba-form">{{ _form|raw }}</div>
-                        {% endif %}
-
-                        {% if _list_table is not empty or _list_filters is not empty %}
-                            <div class="row-fluid">
-                                <div class="sonata-ba-list span10">
-                                    {{ _list_table|raw }}
-                                </div>
-                                <div class="sonata-ba-filter span2">
-                                    {{ _list_filters|raw }}
-                                </div>
-                            </div>
-                        {% endif %}
-
-                    {% endblock %}
-                </div>
             </div>
 
+            {# Main content #}
+            <div class="container-fluid padded">
+
+                {# Alert Message #}
+                {% block notice %}
+                    {% for notice_level in ['success','error','info', 'warning'] %}
+                        {% set session_var = 'sonata_flash_' ~ notice_level %}
+                        {% for flash in app.session.flashbag.get(session_var) %}
+                            <div class="alert {{ 'alert-' ~ notice_level }}">
+                                {{ flash|trans([], 'SonataAdminBundle') }}
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                {% endblock %}
+
+                <div class="row-fluid">
+                    {% if _side_menu is not empty %}
+                        <div class="sidebar span2">
+                            <div class="well sonata-ba-side-menu" style="padding: 8px 0;">{{ _side_menu|raw }}</div>
+                        </div>
+                    {% endif %}
+
+                    <div class="content {{ _side_menu is not empty ? ' span10' : 'span12' }}">
+
+                        {%block actions %}{% endblock %}
+
+
+                        {% block sonata_admin_content %}
+
+                            {% if _preview is not empty %}
+                                <div class="sonata-ba-preview">{{ _preview|raw }}</div>
+                            {% endif %}
+
+                            {% if _content is not empty %}
+                                <div class="sonata-ba-content">{{ _content|raw }}</div>
+                            {% endif %}
+
+                            {% if _show is not empty %}
+                                <div class="sonata-ba-show">{{ _show|raw }}</div>
+                            {% endif %}
+
+                            {% if _form is not empty %}
+                                <div class="sonata-ba-form">{{ _form|raw }}</div>
+                            {% endif %}
+
+                            {% if _list_table is not empty or _list_filters is not empty %}
+                                <div class="row-fluid">
+                                    <div class="sonata-ba-list span10">
+                                        {{ _list_table|raw }}
+                                    </div>
+                                    <div class="sonata-ba-filter span2">
+                                        {{ _list_filters|raw }}
+                                    </div>
+                                </div>
+                            {% endif %}
+
+                        {% endblock %}
+                    </div>
+                </div>
+            </div>
             {% block footer %}
                 <div class="row-fluid">
                     <div class="span2 offset10 pull-right">
