add root for admin dashboard

--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Navigation/primary_sidebar.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Navigation/primary_sidebar.html.twig
@@ -7,7 +7,7 @@
 
         <li class="active">
             <span class="glow"></span>
-            <a href="{{ path('admin') }}">
+            <a href="{{ path('aml_admin_homepage') }}">
                 <i class="icon-dashboard icon-2x"></i>
                 <span>Dashboard</span>
             </a>
