override template base_edit and base_edit_form

--- a/src/Aml/Bundle/AdminBundle/Resources/views/CRUD/base_list.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/CRUD/base_list.html.twig
@@ -12,7 +12,7 @@ file that was distributed with this source code.
 {% extends base_template %}
 
 {% block actions %}
-    <div class="sonata-actions form-actions btn-group">
+    <div class="sonata-actions form-actions">
         {% include 'AmlAdminBundle:Core:create_button.html.twig' %}
     </div>
 {% endblock %}
