--- a/src/Aml/Bundle/AdminBundle/Resources/views/CRUD/base_edit.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/CRUD/base_edit.html.twig
@@ -20,7 +20,7 @@ file that was distributed with this source code.
 {% endblock%}
 
 {% block actions %}
-    <div class="sonata-actions btn-group">
+    <div class="form-actions sonata-actions">
         {% include 'SonataAdminBundle:Button:show_button.html.twig' %}
         {% include 'SonataAdminBundle:Button:history_button.html.twig' %}
         {% include 'SonataAdminBundle:Button:create_button.html.twig' %}
