--- a/src/Aml/Bundle/AdminBundle/Resources/views/CRUD/base_edit_form.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/CRUD/base_edit_form.html.twig
@@ -32,6 +32,7 @@
             {% endblock %}
 
                 <div class="box-content padded tab-content">
+
                     {% for name, form_group in admin.formgroups %}
                         <div class="tab-pane {% if loop.first %} active{% endif %}" id="{{ admin.uniqid }}_{{ loop.index }}">
                             <fieldset>
@@ -49,7 +50,45 @@
                             </fieldset>
                         </div>
                     {% endfor %}
+
+
+
                 </div>
+
+                {% block formactions %}
+                    <div class="box-footer form-actions">
+                        {% if app.request.isxmlhttprequest %}
+                            {% if admin.id(object) %}
+                                <input type="submit" class="btn btn-primary" name="btn_update" value="{{ 'btn_update'|trans({}, 'SonataAdminBundle') }}"/>
+                            {% else %}
+                                <input type="submit" class="btn" name="btn_create" value="{{ 'btn_create'|trans({}, 'SonataAdminBundle') }}"/>
+                            {% endif %}
+                        {% else %}
+                            {% if admin.supportsPreviewMode %}
+                                <button class="btn btn-info persist-preview" name="btn_preview" type="submit">
+                                    <i class="icon-eye-open"></i>
+                                    {{ 'btn_preview'|trans({}, 'SonataAdminBundle') }}
+                                </button>
+                            {% endif %}
+                            {% if admin.id(object) %}
+                                <input type="submit" class="btn btn-primary" name="btn_update_and_edit" value="{{ 'btn_update_and_edit_again'|trans({}, 'SonataAdminBundle') }}"/>
+
+                                {% if admin.hasroute('list') %}
+                                    <input type="submit" class="btn" name="btn_update_and_list" value="{{ 'btn_update_and_return_to_list'|trans({}, 'SonataAdminBundle') }}"/>
+                                {% endif %}
+
+                                {% if admin.hasroute('delete') and admin.isGranted('DELETE', object) %}
+                                    {{ 'delete_or'|trans({}, 'SonataAdminBundle') }}
+                                    <a class="btn btn-danger" href="{{ admin.generateObjectUrl('delete', object) }}">{{ 'link_delete'|trans({}, 'SonataAdminBundle') }}</a>
+                                {% endif %}
+                            {% else %}
+                                <input class="btn btn-primary" type="submit" name="btn_create_and_edit" value="{{ 'btn_create_and_edit_again'|trans({}, 'SonataAdminBundle') }}"/>
+                                <input type="submit" class="btn" name="btn_create_and_list" value="{{ 'btn_create_and_return_to_list'|trans({}, 'SonataAdminBundle') }}"/>
+                                <input class="btn" type="submit" name="btn_create_and_create" value="{{ 'btn_create_and_create_a_new_one'|trans({}, 'SonataAdminBundle') }}"/>
+                            {% endif %}
+                        {% endif %}
+                    </div>
+                {% endblock formactions %}
 
             {% block sonata_post_fieldsets %}
                 </div>
@@ -57,40 +96,7 @@
 
             {{ form_rest(form) }}
 
-            {% block formactions %}
-                <div class="well form-actions">
-                    {% if app.request.isxmlhttprequest %}
-                        {% if admin.id(object) %}
-                            <input type="submit" class="btn btn-primary" name="btn_update" value="{{ 'btn_update'|trans({}, 'SonataAdminBundle') }}"/>
-                        {% else %}
-                            <input type="submit" class="btn" name="btn_create" value="{{ 'btn_create'|trans({}, 'SonataAdminBundle') }}"/>
-                        {% endif %}
-                    {% else %}
-                        {% if admin.supportsPreviewMode %}
-                            <button class="btn btn-info persist-preview" name="btn_preview" type="submit">
-                                <i class="icon-eye-open"></i>
-                                {{ 'btn_preview'|trans({}, 'SonataAdminBundle') }}
-                            </button>
-                        {% endif %}
-                        {% if admin.id(object) %}
-                            <input type="submit" class="btn btn-primary" name="btn_update_and_edit" value="{{ 'btn_update_and_edit_again'|trans({}, 'SonataAdminBundle') }}"/>
 
-                            {% if admin.hasroute('list') %}
-                                <input type="submit" class="btn" name="btn_update_and_list" value="{{ 'btn_update_and_return_to_list'|trans({}, 'SonataAdminBundle') }}"/>
-                            {% endif %}
-
-                            {% if admin.hasroute('delete') and admin.isGranted('DELETE', object) %}
-                                {{ 'delete_or'|trans({}, 'SonataAdminBundle') }}
-                                <a class="btn btn-danger" href="{{ admin.generateObjectUrl('delete', object) }}">{{ 'link_delete'|trans({}, 'SonataAdminBundle') }}</a>
-                            {% endif %}
-                        {% else %}
-                            <input class="btn btn-primary" type="submit" name="btn_create_and_edit" value="{{ 'btn_create_and_edit_again'|trans({}, 'SonataAdminBundle') }}"/>
-                            <input type="submit" class="btn" name="btn_create_and_list" value="{{ 'btn_create_and_return_to_list'|trans({}, 'SonataAdminBundle') }}"/>
-                            <input class="btn" type="submit" name="btn_create_and_create" value="{{ 'btn_create_and_create_a_new_one'|trans({}, 'SonataAdminBundle') }}"/>
-                        {% endif %}
-                    {% endif %}
-                </div>
-            {% endblock formactions %}
         </form>
     {% endif%}
 
