--- a/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/navbar.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/navbar.html.twig
@@ -96,8 +96,8 @@
 
                     <li class="active"><a href="{{ path('home') }}" title="Go home"><i class="icon-home"></i> Home</a>
                     </li>
-                    <li{% if app.request.attributes.get('_route') == 'admin_user' %} class="active"{% endif %}>
-                        <a href="{{ path('admin_user') }}" title="Gestion des membres"><i class="icon-user"></i> Membres</a>
+                    <li{% if app.request.attributes.get('_route') == 'admin_bundle_users_user_list' %} class="active"{% endif %}>
+                        <a href="{{ path('admin_bundle_users_user_list') }}" title="Gestion des membres"><i class="icon-user"></i> Membres</a>
                     </li>
 
                 </ul>
