--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/blocTags.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/blocTags.html.twig
@@ -1,8 +1,10 @@
-    {# Bloc des Tags #}
+{# Bloc des Tags #}
 <h3>Mots-clés</h3>
 <ul id="bloc-blog-categorie">
-	<li><a class="active" title="Tous les articles" href="{{ path('blog') }}">Tous</a></li>
-	{% for tag in tags %}
-		<li><a class="active" title="Mot-clé : {{ tag.name }}" href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a> ({{tag.articles|length}})</li>
-	{% endfor %}
+    <li><a class="active" title="Tous les articles" href="{{ path('blog') }}">Tous</a></li>
+    {% for tag in tags %}
+        <li><a class="active" title="Mot-clé : {{ tag.name }}"
+               href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a> ({{ tag.articles|length }})
+        </li>
+    {% endfor %}
 </ul>
