--- a/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/edit.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/edit.html.twig
@@ -5,61 +5,67 @@
 
 {% block body %}
 
-<div class="row-fluid">
+    <div class="row-fluid">
 
-	<div class="span12">
-		
-		<form class="form-horizontal" id="blog-add-content" action="{{ path('admin_content_blog_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-            {{ form_row(edit_form.title) }}
-            {{ form_row(edit_form.body) }}
-            {{ form_row(edit_form.category) }}
+        <div class="span12">
 
-            <div class="control-group">
-                <label class="control-label" for="tumblr_addtags">{{ form_label(edit_form.addtags)  }}</label>
-                <div class="controls manage-tags-container">
-                    <div class="input-append manage-tags">
-                        {{ form_widget(edit_form.addtags)  }}<button id="blog-button-add-tag" class="btn" type="button">
-                            <i class="icon-plus"></i></button>
+            <form class="form-horizontal" id="blog-add-content"
+                  action="{{ path('admin_content_blog_update', { 'id': entity.id }) }}"
+                  method="post" {{ form_enctype(edit_form) }}>
+                {{ form_row(edit_form.title) }}
+                {{ form_row(edit_form.body) }}
+                {{ form_row(edit_form.category) }}
+
+                <div class="control-group">
+                    <label class="control-label" for="tumblr_addtags">{{ form_label(edit_form.addtags) }}</label>
+
+                    <div class="controls manage-tags-container">
+                        <div class="input-append manage-tags">
+                            {{ form_widget(edit_form.addtags) }}
+                            <button id="blog-button-add-tag" class="btn" type="button">
+                                <i class="icon-plus"></i></button>
+                        </div>
+                        {% set tagDataPrototype = '<span>__name__</span><button class="close" >&times;</button><input type="hidden" name="aml_bundle_BlogBundle_blogtype[tags][]" value="__id__" />' %}
+                        <div id="blog_tags" class="tags manage-tags" data-prototype="{{ tagDataPrototype }}">
+
+                            {% for tag in entity.tags %}
+                                <div class="tag-item alert alert-info">
+                                    <span>{{ tag.name }}</span>
+                                    <button class="close">&times;</button>
+                                    <input type="hidden" name="aml_bundle_BlogBundle_blogtype[tags][]"
+                                           value="{{ tag.id }}"/>
+                                </div>
+                            {% endfor %}
+
+                        </div>
+
                     </div>
-                    {% set tagDataPrototype = '<span>__name__</span><button class="close" >&times;</button><input type="hidden" name="aml_bundle_BlogBundle_blogtype[tags][]" value="__id__" />' %}
-                    <div id="blog_tags" class="tags manage-tags" data-prototype="{{ tagDataPrototype }}">
-
-                        {% for tag in entity.tags %}
-                            <div class="tag-item alert alert-info">
-                                <span>{{ tag.name }}</span>
-                                <button class="close" >&times;</button><input type="hidden" name="aml_bundle_BlogBundle_blogtype[tags][]" value="{{ tag.id }}" />
-                            </div>
-                        {% endfor %}
-
-                    </div>
-
                 </div>
-            </div>
 
-            {{ form_row(edit_form.public) }}
+                {{ form_row(edit_form.public) }}
 
-            {{form_row(edit_form._token)}}
-		    <div class="form-actions">
-                <a class="btn btn-default" href="{{ path('admin_content_blog') }}">
-                    <i class="icon-arrow-left"></i> Retour à la liste des articles
-                </a>
-		        <button class="btn btn-primary pull-right" type="submit">Enregistrer</button>
-		    </div>
-		</form>
-		
-		<ul class="record_actions">
-		    <li>
-		        <form action="{{ path('admin_content_blog_delete', { 'id': entity.id }) }}" method="post">
-		            {{ form_widget(delete_form) }}
-		            <button class="btn btn-danger" type="submit">Supprimer</button>
-		        </form>
-		    </li>
-		</ul>
-	</div>
-</div>
+                {{ form_row(edit_form._token) }}
+                <div class="form-actions">
+                    <a class="btn btn-default" href="{{ path('admin_content_blog') }}">
+                        <i class="icon-arrow-left"></i> Retour à la liste des articles
+                    </a>
+                    <button class="btn btn-primary pull-right" type="submit">Enregistrer</button>
+                </div>
+            </form>
 
-	{# CONFIG CKEDITOR #}
-  	{% include "AmlWebBundle::Admin/Partial/ckeditor.html.twig" with {'target': 'aml_bundle_BlogBundle_blogtype_body'}  %}
+            <ul class="record_actions">
+                <li>
+                    <form action="{{ path('admin_content_blog_delete', { 'id': entity.id }) }}" method="post">
+                        {{ form_widget(delete_form) }}
+                        <button class="btn btn-danger" type="submit">Supprimer</button>
+                    </form>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    {# CONFIG CKEDITOR #}
+    {% include "AmlWebBundle::Admin/Partial/ckeditor.html.twig" with {'target': 'aml_bundle_BlogBundle_blogtype_body'} %}
 
 {% endblock body %}
 
@@ -70,7 +76,7 @@
     <script type="text/javascript">
         tags.urlLoadTag = '{{ url('blog_tags_load_item') }}';
 
-        tags.init = function(){
+        tags.init = function () {
             this.form = $('#tumblr-add-content');
             this.containerSelectedTags = $('#container-selected-tags');
 
