--- a/src/Aml/Bundle/BlogBundle/Resources/views/Admin/BlogCategories/index.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Admin/BlogCategories/index.html.twig
@@ -5,46 +5,47 @@
 {%- endblock title %}
 
 {% block body %}
-<div class="row-fluid">
-    <div class="span3">
-        {# Barre de navigation left #}
-        {% include "AmlWebBundle::Admin/Navigation/content_subnav.html.twig" %}
-    </div>
-
-    <div class="span5">
-        <h1>Blog - Gestion des catégories</h1>
-
-        <div class="form-actions">
-            <a class="btn btn-default" href="{{ path('admin_content_blog_categories_new') }}">
-                <i class="icon-plus"></i> Créer une catégorie
-            </a>
+    <div class="row-fluid">
+        <div class="span3">
+            {# Barre de navigation left #}
+            {% include "AmlWebBundle::Admin/Navigation/content_subnav.html.twig" %}
         </div>
 
-        <table class="table table-bordered table-striped">
-            <thead>
+        <div class="span5">
+            <h1>Blog - Gestion des catégories</h1>
+
+            <div class="form-actions">
+                <a class="btn btn-default" href="{{ path('admin_content_blog_categories_new') }}">
+                    <i class="icon-plus"></i> Créer une catégorie
+                </a>
+            </div>
+
+            <table class="table table-bordered table-striped">
+                <thead>
                 <tr>
                     <th>Name</th>
                     <th>Description</th>
                     <th>Action</th>
                 </tr>
-            </thead>
-            <tbody>
-                {% if entities is not empty  %}
-                        {% for entity in entities %}
-                            <tr>
-                                <td>{{ entity.name }}</td>
-                                <td>{{ entity.description }}</td>
-                                <td>
-                                    <a href="{{ path('admin_content_blog_categories_edit', { 'id': entity.id }) }}"><i class="icon-pencil"></i> Modifier</a>
-                                </td>
-                            </tr>
-                        {% endfor %}
+                </thead>
+                <tbody>
+                {% if entities is not empty %}
+                    {% for entity in entities %}
+                        <tr>
+                            <td>{{ entity.name }}</td>
+                            <td>{{ entity.description }}</td>
+                            <td>
+                                <a href="{{ path('admin_content_blog_categories_edit', { 'id': entity.id }) }}"><i
+                                            class="icon-pencil"></i> Modifier</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
                 {% else %}
                     <td colspan="4">Aucune catégorie enregistré</td>
                 {% endif %}
-            </tbody>
-        </table>
+                </tbody>
+            </table>
 
+        </div>
     </div>
-</div>
 {% endblock body %}
