--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/show.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/show.html.twig
@@ -6,30 +6,32 @@
 
 {% block body %}
 
-<div id="col-left" class="two-cols-content">
-	<div class="blog-article">
-		<h2>{{ entity.title }}</h2>
-				
-		<div class="publi-info">
+    <div id="col-left" class="two-cols-content">
+        <div class="blog-article">
+            <h2>{{ entity.title }}</h2>
+
+            <div class="publi-info">
 			<span>Publié le 
-				<span class="date-article-block">{% if entity.created %}{{ entity.created|date('d/m/Y à H:i') }}{% endif%}</span>
+				<span class="date-article-block">{% if entity.created %}{{ entity.created|date('d/m/Y à H:i') }}{% endif %}</span>
 			</span>
-		</div>
+            </div>
 
-		<div class="blog-visuel">
-			<img src="{{ asset(entity.logo.webpath) }}" alt="" title="{{ entity.logo.title }}" class="imagecache imagecache-visuel_blog" width="500" height="300">
-		</div>				
-				
-		<div class="article-description">{{entity.body|raw}}</div>
-				
-		<span class="blog-tags">Mots clés : </span>	
-		{% for key,tag in entity.tags %}
-			{% if key > 0 %}, {% endif %}<a class="active" title="{{ tag.description }}" href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a>		
-		{% endfor %}		
-	</div>
+            <div class="blog-visuel">
+                <img src="{{ asset(entity.logo.webpath) }}" alt="" title="{{ entity.logo.title }}"
+                     class="imagecache imagecache-visuel_blog" width="500" height="300">
+            </div>
 
-</div>
-<div id="col-right">
+            <div class="article-description">{{ entity.body|raw }}</div>
 
-</div>
+            <span class="blog-tags">Mots clés : </span>
+            {% for key,tag in entity.tags %}
+                {% if key > 0 %}, {% endif %}<a class="active" title="{{ tag.description }}"
+                                                href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a>
+            {% endfor %}
+        </div>
+
+    </div>
+    <div id="col-right">
+
+    </div>
 {% endblock body %}
