add relationships many to many : Evenements/Partenaires and Evenements/articles

--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/blocArticles.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/blocArticles.html.twig
@@ -1,7 +1,8 @@
 {# Bloc des articles liés #}
+{% if entity.articles %}
 <h3>Articles liés</h3>
 <ul id="blocs-evenement-articles">
-    {% for key,article in entity.articlesBlog %}
+    {% for key,article in entity.articles %}
         <li>
             {% if article.url is defined and article.url is not empty %}
                 <a href="{{ path('blog_show_rewrite', { 'url_key': article.url }) }}" title="Voir l'article : {{ article.title }}" >{{ article.title }}</a>
@@ -11,3 +12,4 @@
         </li>
     {% endfor %}
 </ul>
+{% endif %}
