add option wysiwyg for textarea fields

--- a/src/Aml/Bundle/AdminBundle/Resources/views/standard_layout.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/standard_layout.html.twig
@@ -225,5 +225,9 @@ file that was distributed with this source code.
                 </div>
             {% endblock %}
         </div>
+
+        <script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap.js') }}"></script>
+        <script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap-datepicker.js') }}"></script>
+        <script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap-timepicker.js') }}"></script>
     </body>
 </html>
