--- a/src/Aml/Bundle/AdminBundle/Resources/views/Form/form_admin_fields.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/Form/form_admin_fields.html.twig
@@ -216,10 +216,47 @@ file that was distributed with this source code.
 
 {% block file_widget %}
     {% spaceless %}
-        {{ block('form_widget') }}
         {% if image_url is not null %}
-            <img src="{{ asset(image_url) }}" width="150" />
+            <div class="widget-preview">
+                <img src="{{ asset(image_url) }}" width="150" />
+            </div>
         {% endif %}
 
+    {% endspaceless %}
+{% endblock %}
+
+{% block textarea_widget %}
+    {% spaceless %}
+        <div class="textarea_widget">
+            <textarea {{ block('widget_attributes') }}>{{ value }}</textarea>
+        </div>
+        {% if wysiwyg %}
+            {% block javascripts %}
+                {# CONFIG CKEDITOR #}
+                {% include "AmlAdminBundle::Partial/ckeditor.html.twig" with {'target':  id }  %}
+            {% endblock %}
+        {% endif %}
+    {% endspaceless %}
+{% endblock %}
+
+{% block date_widget %}
+    {% spaceless %}
+        <div id="date_evenement" class="input-append date" data-date="{{ "now"|date("d/m/Y") }}">
+            {{ block('field_widget') }}<span class="add-on"><i class="icon-th"></i></span>
+        </div>
+    {% endspaceless %}
+{% endblock %}
+
+{% block time_widget %}
+    {% spaceless %}
+        {% if widget == 'single_text' %}
+            <div class="input-append bootstrap-timepicker-component">
+                {{ block('form_widget_simple') }}<span class="add-on"><i class="icon-time"></i></span>
+            </div>
+        {% else %}
+            <div {{ block('widget_container_attributes') }}>
+                {{ form_widget(form.hour, { 'attr': { 'size': '1' } }) }}:{{ form_widget(form.minute, { 'attr': { 'size': '1' } }) }}{% if with_seconds %}:{{ form_widget(form.second, { 'attr': { 'size': '1' } }) }}{% endif %}
+            </div>
+        {% endif %}
     {% endspaceless %}
 {% endblock %}
