--- a/src/Aml/Bundle/AdminBundle/Resources/views/Form/form_admin_fields.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/Form/form_admin_fields.html.twig
@@ -216,6 +216,7 @@ file that was distributed with this source code.
 
 {% block file_widget %}
     {% spaceless %}
+        {{ block('form_widget') }}
         {% if image_url is not null %}
             <div class="widget-preview">
                 <img src="{{ asset(image_url) }}" width="150" />
